Fix address overlapping

--- a/front/src/style/main.scss
+++ b/front/src/style/main.scss
@@ -1152,14 +1152,15 @@ h2 {
       font-size: 1.6rem;
       background: none;
       box-shadow: none;
-      border: none;
       outline: none;
       height: 100%;
-      border-radius: 1px;
-    }
+      border: 1px solid black;
+      border-radius: 0;
+      border-left: none;
 
-    button:focus {
-      box-shadow: 0 0 0 .2rem rgba(0, 0, 0, .5)
+      :focus {
+        box-shadow: 0 0 0 .2rem rgba(0, 0, 0, .5)
+      }
     }
 
     .dropdown-menu {
